--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -1,11 +1,12 @@
 .chart-btn {
-    max-width: 200px;
+    min-width: 200px;
     padding: 10px;
     border: none;
     background: linear-gradient(to right, rgba(144, 202, 249, 0.5), rgba(144, 202, 249, 1));
     opacity: .7;
     transition: all .5s ease;
     margin-bottom: 20px;
+    border-radius: 6px;
 
     &:hover {
         opacity: 1;
