--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -2,7 +2,7 @@
     min-width: 200px;
     padding: 10px;
     border: none;
-    background: linear-gradient(to right, rgba(144, 202, 249, 0.5), rgba(144, 202, 249, 1));
+    background: linear-gradient(to right, rgba(144, 202, 249, 0.5), rgba(144, 202, 249, 1)) !important;
     opacity: .7;
     transition: all .5s ease;
     margin-bottom: 20px;
