--- a/src/App.scss
+++ b/src/App.scss
@@ -17,3 +17,16 @@
     height: 100%;
   }
 }
+
+.dark-mode {
+  background-color: #170F23;
+  .font-color { 
+    color: #fff;
+  }
+}
+.light-mode {
+  background-color: #fff;
+  .font-color { 
+    color: #000;
+  }
+}
