--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -2,35 +2,127 @@
     position: fixed;
     width: 100%;
     height: 60px;
-    background-color: #231B2E;
     z-index: 1;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     .nav-inner {
-        height: 100%;
-        position: relative;
         display: flex;
         align-items: center;
-        justify-content: flex-start;
-        gap: 8px;
-        padding: 8px;
-        box-sizing: border-box;
-        .nav-item {
-            min-width: 100px;
+        justify-content: space-between;
+        .nav-link {            
             height: 100%;
+            position: relative;
             display: flex;
             align-items: center;
-            justify-content: center;
-            color: #ccc;
-            font-size: 20px;
-            font-weight: 700;
-            border-radius: 5px;
-            cursor: pointer;
-            &:hover {
+            justify-content: flex-start;
+            gap: 8px;
+            padding: 8px;
+            box-sizing: border-box;
+            .nav-item {
+                min-width: 100px;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 20px;
+                font-weight: 700;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+        }
+        .bg-mode {
+            .bg-mode-inner {
+                position: relative;
+                height: 20px;
+                width: 40px;
+                border-radius: 20px;
+                padding: 2px;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                box-sizing: content-box;
+                cursor: pointer;
+                transition: all .3s ease;
+                .toggle {
+                    position: absolute;
+                    left: 1;
+                    top: 50%;
+                    transform: translate(0, -50%);
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    transition: all .3s ease;
+                }
+                .dark-toggle {
+                    transform: translate(100%, -50%);
+                }
+            }
+        }
+    }
+}
+
+.nav-dark-mode {
+    background-color: #231B2E;
+    .nav-inner {
+        .nav-link {
+            .nav-item {
+                color: #ccc;
+                &:hover {
+                    color: #fff;
+                }
+            }
+            .active {
+                background-color: rgba(255, 255, 255, .3);
                 color: #fff;
             }
         }
-        .active {
-            background-color: #393243;
-            color: #fff;
+        .bg-mode {
+            .bg-mode-inner {
+                background-color: rgba(255, 255, 255, .1);
+                border: 1px solid rgba(255, 255, 255, 0.8);
+                .toggle {
+                    background-color: rgba(255, 255, 255, .8);
+                }
+
+                &:hover {
+                    border: 1px solid rgba(255, 255, 255, 1);
+                    .toggle {
+                        background-color: rgba(255, 255, 255, 1);
+                    }
+                }
+            }
+        }
+    }
+}
+.nav-light-mode {
+    background-color: rgba(255, 255, 255, 1);
+    .nav-inner {
+        .nav-link {
+            .nav-item {
+                color: #333333;
+                &:hover {
+                    color: rgb(0, 0, 0);
+                }
+            }
+            .active {
+                background-color: rgba(0, 0, 0, .3);
+                color: rgba(0, 0, 0);
+            }
+        }
+        .bg-mode {
+            .bg-mode-inner {
+                background-color: rgba(0, 0, 0, .3);
+                border: 1px solid #231B2E;
+                .toggle {
+                    background-color: #231B2E;
+                }
+
+                &:hover {
+                    opacity: .8;
+                    .toggle {
+                        opacity: .8;
+                    }
+                }
+            }
         }
     }
 }
