--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -51,6 +51,9 @@
                     height: 20px;
                     border-radius: 50%;
                     transition: all .3s ease;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
                 .dark-toggle {
                     transform: translate(100%, -50%);
