--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@
   }
 }
 .light-mode {
-  background-color: #fff;
+  background: rgba(255, 255, 255, 0.7);
   .font-color { 
     color: #000;
   }
