--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -19,6 +19,7 @@
             box-sizing: border-box;
             .nav-item {
                 min-width: 100px;
+                padding: 10px;
                 height: 100%;
                 display: flex;
                 align-items: center;
