update package lost feature

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,6 +1,7 @@
 .nav-container {
     position: fixed;
     width: 100%;
+    min-width: 1400px;
     height: 60px;
     z-index: 1;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
