--- a/src/components/MainPage.scss
+++ b/src/components/MainPage.scss
@@ -5,7 +5,7 @@
         height: 100%;
         position: relative;
         width: 100%;
-        padding: 50px 0 0;
+        padding: 50px 0;
         margin-top: 60px;
         box-sizing: border-box;
         .row {
